[tool.poetry]
name = "cw-4"
version = "0.1.0"
description = ""
authors = ["VladimirShtefan <shtefanvladimir14@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_4"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
